# ChessVisionEngine

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  testfile.txt.txt
data/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: api.md  architecture.md
models/: .gitkeep
notebooks/: .gitkeep
scripts/: download_stockfish.py  train_model.py
src/: __init__.py  main.py
src/chess_logic/: __init__.py  board_state.py  fen_generator.py  position_validator.py
src/detection/: __init__.py  board_detector.py  image_processor.py  piece_classifier.py
src/engine/: __init__.py  analysis.py  stockfish_wrapper.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  config.py  logging_config.py
tests/: __init__.py  test_detection.py  test_engine.py  test_fen_generation.py
